test/cherry/Language/list_tensor_function_return_lowering_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn make(): List<Float32[2]> {
  const w1: Float32[2] = [1.0, 2.0];
  const w2: Float32[2] = [3.0, 4.0];
  const weights: List<Float32[2]> = [w1, w2];
  weights
}

fn main(): UInt64 {
  0
}

# CHECK: error: function returns containing Tensor require list/tensor descriptor ABI
